MAINT-2877 Improve FHIR Validator test responses relating to expansion parameters